Add deprecation warning when setting gpointers to anything other than int.

This is a first pass which does not change anything except add a warning
when anything other than an int is set on a gpointer on a boxed type.

https://bugzilla.gnome.org/show_bug.cgi?id=683599